--- a/6.md
+++ b/6.md
@@ -123,7 +123,7 @@
 
 Ранее мы говорили, что любой выпускник колледжа в развитой стране может внести значительный вклад в изменение мира, отдавая 10% своего дохода на благотворительность. Средний американский выпускник зарабатывает около $77,000 в год, и 10 процентов от этой суммы могли бы спасти порядка 40 жизней, если бы были перечислены, к примеру, фонду борьбы с малярией.
 
-Если ты сможешь заработать хотя бы на 10% больше, чем сейчас, а потом пожертвовать эти деньги, это будет уже двойным профитом. А если ты обнаружишь организации, более значимые, чем фонд борьбы с малярией, например, занимающиеся какой-то другой проблемой, исследованием или поддержкой, степень твое влияния на мировые проблемы станет еще выше.
+Если ты сможешь заработать хотя бы на 10% больше, чем сейчас, а потом пожертвовать эти деньги, это будет уже двойным профитом. А если ты обнаружишь организации, более значимые, чем фонд борьбы с малярией, например, занимающиеся какой-то другой проблемой, исследованием или поддержкой, степень твоего влияния на мировые проблемы станет еще выше.
 
 С тех пор, как мы предложили концепцию «получай, чтобы отдавать» в 2011 году, сотни людей стали ее сторонниками и продолжают ее придерживаться. Большинство из них жертвует около 30% своего дохода, другие — больше 50%. В общей сложности, за ближайшие годы они смогут пожертвовать десятки миллионов долларов в высокоэффективные благотворительные фонды. Таким образом, они профинансируют энтузиастов, желающих непосредственно заниматься мировыми проблемами, но не имеющих на это ресурсов.
 
@@ -172,19 +172,19 @@
 
 (Если хочешь углубиться в этику заработка ради пожертвований, советуем ознакомиться с <a href="https://www.academia.edu/1557895/Replaceability_Career_Choice_and_Making_a_Difference" target="_blank">этой нашей статьёй</a>.)
 
-### What’s the best way to earn to give?
+### Как эффективнее всего зарабатывать, чтобы отдавать?
 
-To learn about how to best earn to give – including recommendations of which jobs to take – see this article:
+Чтобы узнать, как лучше всего вложить силы в заработок ради пожертвований - включая наши рекомендации по выбору профессии, - прочитай эту статью:
 
-<a href="/articles/earning-to-give/#whats-the-best-way-to-earn-to-give" class="btn btn-default">How to earn to give</a>
+<a href="/articles/earning-to-give/#whats-the-best-way-to-earn-to-give" class="btn btn-default">Как получать, чтобы отдавать</a>
 
-### Which charities are most effective?
+### Какая благотворительность наиболее эффективна?
 
-As we’ve seen, <a href="/career-guide/most-pressing-problems/">many social interventions have no proven impact</a>, and many other charities are poorly run black boxes. So if you give to the wrong organisation, you won’t achieve much.
+Как мы уже отмечали, <a href="/career-guide/most-pressing-problems/">множество социальных мероприятий не имеют доказанного воздействия</a>, а множество благотворительных организаций являют собой сомнительные черные ящики. Так что, отдав свои средства в ненадежную организацию, ты не достигнешь многого.
 
-On the other hand, so long as there’s *at least* one highly effective organisation to fund, then earning to give can be high impact. You don’t even need to limit yourself to funding charities – you could fund research, political advocacy or for-good for-profits instead.
+С другой стороны, пока есть *хотя бы* одна высокоэффективная благотворительная организация, концепция "получай, чтобы отдавать" может быть действенной. Ты ничем не ограничен в своей возможности помогать средствами: можешь спонсировать как исследования и политические продвижения, так и нацеленные на помощь миру коммерческие организации.
 
-We’ve already covered GiveWell’s top recommended charity, <a href="http://www.givewell.org/charities/against-malaria-foundation">Against Malaria Foundation</a>, as an example of an effective organisation. <a href="/articles/best-charity/">Learn more about which charities are most effective to donate to</a>.
+Мы уже привели наиболее значимые примеры для благотворительности из рекоммендаций от GiveWell, <a href="http://www.givewell.org/charities/against-malaria-foundation">фонд борьбы с малярией</a> - одна из проверенных организаций. <a href="/articles/best-charity/">Узнай больше о действительно эффективных благотворительных организациях, которым ты можешь помочь</a>.
 
 ## Approach 2: Advocacy
 
