--- a/6.md
+++ b/6.md
@@ -40,7 +40,7 @@
 
 В то же время, многие выпускники чувствуют себя нереализованными, потому что, выполняя свои профессиональные обязанности, не помогают людям напрямую. Но в этом и нет острой необходимости. Иногда вполне достаточно помогать людям косвенно, и, если мыслить шире, творчески, намного проще найти такую работу, в которой одновременно находится применение вашим уникальным способностям, и появляется возможность быть полезным другим людям.
 
-Ниже мы представим четыре способа, как можно, выполняя профессиональные обязанности, участвовать в решении социальных проблем, которые Вас волнуют (о них мы говорили в <a href="/career-guide/world-problems/">предыдущей главе</a>). Вот эти четыре пути: получать, чтобы отдавать; пропагандировать; заниматься научными исследованиями; непосредственно трудиться в проблемной отрасли. Мы составим конкретные рекомендации по каждому из них.
+Ниже мы представим четыре способа, как можно, выполняя профессиональные обязанности, участвовать в решении социальных проблем, которые тебя волнуют (о них мы говорили в <a href="/career-guide/world-problems/">предыдущей главе</a>). Вот эти четыре пути: получать, чтобы отдавать; пропагандировать; заниматься научными исследованиями; непосредственно трудиться в проблемной отрасли. Мы составим конкретные рекомендации по каждому из них.
 
 *Время чтения: 20 минут.*</p>
 
@@ -49,7 +49,7 @@
     <h2 class="no_toc">The bottom line</h2>
     <ul>
         <li>Итак, когда мы выявили проблему, как описывалось в <a href="/career-guide/world-problems/" target="_blank">предыдущей статье</a>, следующим шагом станет определить, как же эффективнее вложить свои силы в её решение.</li>
-        <li> Рассмотрим как косвенные подходы, такие как исследования, пропаганда и заработок ради пожертвований, <i>так и</i> непосредственную работу с проблемой. Ты можешь найти как путь, подразумевающий большее влияние на проблему, так и путь, просто более комфортный для Вас.</li>
+        <li> Рассмотрим как косвенные подходы, такие как исследования, пропаганда и заработок ради пожертвований, <i>так и</i> непосредственную работу с проблемой. Ты можешь найти как путь, подразумевающий большее влияние на проблему, так и путь, просто наиболее для тебя комфортный.</li>
         <li>Затем сфокусируйтесь на подходах, которые наиболее эффективны в Вашей области. Некоторые проблемы можно решить просто сменой поведения. Другие требуют исследований, третьи - финансирования, и так далее.</li>
         <li>И наконец, так как люди, сильнее заинтересованные в определенной отрасли, достигают в ней более значимых результатов, выбери что-то, к чему ты имеешь склонность. Не занимайся ради влияния на проблему задачами, которые тебя не увлекают.</li>
         <li>В идеале, ищи наилучшее сочетание того, (i) насколько актуальна проблема, (ii) насколько значимым окажется твой вклад и (iii) насколько тебе эта деятельность подходит.</li>
@@ -160,7 +160,7 @@
 
 ### Типичные возражения против идеи зарабатывать, чтобы отдавать
 
-<strong>Смогут ли люди на практике следовать этому подходу?</strong> Не откажутся ли они от пожертвований в пользу роскоши, поддавшись влиянию своего окружения? Нас беспокоил этот вопрос, когда мы впервые представили свою идею, но такого не произошло. Сотни людей продолжают отчислять крупные суммы на пожертвования, и тогда как некоторые бросили эту затею, найдя иной способ приносить пользу, мы не знаем ни одного человека, кто просто так отказался бы от намерения делать пожертвования.  В частности, многие люди продолжают жертвовать, поскольку публично взяли на себя такое обязательство, например, через <a href="https://www.givingwhatwecan.org/pledge/" target="_blank">Giving What We Can</a>. Когда вы знаете, что есть уже столько людей, зарабатывающих ради пожертвований, стать приверженцем такой идеи становится намного проще.
+<strong>Смогут ли люди на практике следовать этому подходу?</strong> Не откажутся ли они от пожертвований в пользу роскоши, поддавшись влиянию своего окружения? Нас беспокоил этот вопрос, когда мы впервые представили свою идею, но такого не произошло. Сотни людей продолжают отчислять крупные суммы на пожертвования, и тогда как некоторые бросили эту затею, найдя иной способ приносить пользу, мы не знаем ни одного человека, кто просто так отказался бы от намерения делать пожертвования.  В частности, многие люди продолжают жертвовать, поскольку публично взяли на себя такое обязательство, например, через <a href="https://www.givingwhatwecan.org/pledge/" target="_blank">Giving What We Can</a>. Когда знаешь, что есть уже столько людей, зарабатывающих ради пожертвований, стать приверженцем такой идеи становится намного проще.
 
 <strong>Разве многие из высокооплачиваемый профессий не причиняют вреда миру?</strong> <a href="https://80000hours.org/articles/harmful-career/">Мы не рекомендуем браться за работу, от которой много вреда</a>, даже ради пожертвований. На практике, большинство людей, придерживающихся идеи «больше зарплата — больше пожертвований», работают в сфере технологий, управления активами, медицины,  консультирования, и на наш взгляд, эти профессии относительно полезны, либо нейтральны. К примеру, многие (но <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">не все</a>) трейдеры получают прибыль за счет других трейдеров, так что они просто обеспечивают круговорот денег <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">от одних богатых людей к другим</a>. Конечно, существуют <i>определенные</i> люди, которые способны нанести вред и в этих сферах, но это замечание справедливо вообще для всех сфер. 
 
