--- a/6.md
+++ b/6.md
@@ -162,7 +162,7 @@
 
 <strong>Смогут ли люди на практике следовать этому подходу?</strong> Не откажутся ли они от пожертвований в пользу роскоши, поддавшись влиянию своего окружения? Нас беспокоил этот вопрос, когда мы впервые представили свою идею, но такого не произошло. Сотни людей продолжают отчислять крупные суммы на пожертвования, и тогда как некоторые бросили эту затею, найдя иной способ приносить пользу, мы не знаем ни одного человека, кто просто так отказался бы от намерения делать пожертвования.  В частности, многие люди продолжают жертвовать, поскольку публично взяли на себя такое обязательство, например, через <a href="https://www.givingwhatwecan.org/pledge/" target="_blank">Giving What We Can</a>. Когда знаешь, что есть уже столько людей, зарабатывающих ради пожертвований, стать приверженцем такой идеи становится намного проще.
 
-<strong>Разве многие из высокооплачиваемый профессий не причиняют вреда миру?</strong> <a href="https://80000hours.org/articles/harmful-career/">Мы не рекомендуем браться за работу, от которой много вреда</a>, даже ради пожертвований. На практике, большинство людей, придерживающихся идеи «больше зарплата — больше пожертвований», работают в сфере технологий, управления активами, медицины,  консультирования, и на наш взгляд, эти профессии относительно полезны, либо нейтральны. К примеру, многие (но <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">не все</a>) трейдеры получают прибыль за счет других трейдеров, так что они просто обеспечивают круговорот денег <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">от одних богатых людей к другим</a>. Конечно, существуют <i>определенные</i> люди, которые способны нанести вред и в этих сферах, но это замечание справедливо вообще для всех сфер. 
+<strong>Множество высокооплачиваемых профессий могут причинять вред миру, разве не так?</strong> <a href="https://80000hours.org/articles/harmful-career/">Мы не рекомендуем браться за работу, от которой много вреда</a>, даже ради пожертвований. На практике, большинство людей, придерживающихся идеи «больше зарплата — больше пожертвований», работают в сфере технологий, управления активами, медицины, консалтинга, и на наш взгляд, эти профессии относительно полезны, либо просто нейтральны. К примеру, многие (но <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">не все</a>) трейдеры получают прибыль за счет других трейдеров, так что они, можно считать, обеспечивают круговорот денег <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">от одних богатых людей к другим</a>. Конечно, существуют <i>определенные</i> люди, способные нанести вред и в этих сферах, но такое замечание справедливо вообще для всех сфер. 
 
 В целом, существует множество способов заработать, и мы сомневаемся, что все они должны приносить вред. Как насчет медицины, инженерии или частного обучения? Кроме того, всегда можно совершенствовать свою отрасль изнутри. Если вашему предшественнику было всё равно, сколько вреда приносит его работа, а вам это небезразлично, для общества так наверняка будет лучше.
 
