--- a/6.md
+++ b/6.md
@@ -184,46 +184,49 @@
 
 С другой стороны, пока есть *хотя бы* одна высокоэффективная благотворительная организация, концепция "получай, чтобы отдавать" может быть действенной. Ты ничем не ограничен в своей возможности помогать средствами: можешь спонсировать как исследования и политические продвижения, так и нацеленные на помощь миру коммерческие организации.
 
-Мы уже привели наиболее значимые примеры для благотворительности из рекоммендаций от GiveWell, <a href="http://www.givewell.org/charities/against-malaria-foundation">фонд борьбы с малярией</a> - одна из проверенных организаций. <a href="/articles/best-charity/">Узнай больше о действительно эффективных благотворительных организациях, которым ты можешь помочь</a>.
+Мы уже привели наиболее рекомендуемые благотворительные организации от GiveWell, <a href="http://www.givewell.org/charities/against-malaria-foundation">фонд борьбы с малярией</a> - одна из проверенных организаций. <a href="/articles/best-charity/">Узнай больше о действительно эффективных благотворительных организациях, которым ты можешь помочь</a>.
 
-## Approach 2: Advocacy
+## Approach 2: Пропаганда
 
-One alternative to earning to give is advocacy – the promotion of solutions to pressing problems. Advocacy can also be pursued in a wide range of careers, and can be even higher impact than earning to give.
+Одной из альтернатив пожертвованиям является пропаганда - продвижение решений для актуальных проблем. Возможность пропагандировать может так же стать целью построения карьеры во множестве различных областей, и может в них позволить влиять на мир даже сильнее, чем просто заработок ради пожертвований. 
 
-Consider the following options:
+Рассмотрим два варианта:
 
-1. Earn to give yourself.
-1. Earn to give yourself, and persuade a friend to earn to give as well.
+1. Ты зарабатываешь, чтобы заниматься благотворительностью.
+2. Ты зарабатываешь, чтобы заниматься благотворительностью, и уговариваешь друга поступать точно так же. 
 
-The second path does more good – in fact probably about twice as much – and this illustrates the power of advocacy.
+Второй путь определенно принесет больше пользы, возможно, прямо-таки в два раза больше - и вот так мы можем проиллюстрировать силу пропаганды.
 
-Many of the highest impact people in history have been advocates of one kind or another. Take Rosa Parks, who refused to give up her seat to a white man on a bus, sparking a protest which led to a Supreme Court ruling that segregated buses were unconstitutional. Parks was a seamstress in her day job, but in her spare time she was very involved with the civil rights movement. After she was arrested, she and the NAACP worked hard and worked strategically, staying up all night creating thousands of fliers to launch a total boycott of buses in a city of 40,000 African Americans, whilst simultaneously pushing forward with legal action. This led to major progress for civil rights.
+Многие из тех, кто оставил самый значительный след в истории, так или иначе отстаивали общественные интересы. Взять,
+к примеру, Розу Паркс, которая отказалась уступать свое место в автобусе белому мужчине. Ее протест привел к постановлению Верховного Суда, согласно которому сегрегированные автобусы (отдельные автобусы для белых и для других этнических групп) были объявлены противоречащими конституции. 
+Паркс зарабатывала на жизнь трудом швеи, однако в свободное время она активно участвовала в движении за гражданские права. Когда ее арестовали, Паркс и NAACP действовали стратегически и ночами напролет упорно трудились, печатая тысячи листовок, чтобы организовать полный бойкот автобусов города, в котором проживали 40 тысяч афроамериканцев, параллельно с этим занимались и судебым разбирательством. Благодаря их действиям, был достигнут значительный прогресс в борьбе за гражданские права.
 
-There are also many examples you don’t hear about, like Viktor Zhdanov, who was one of the highest impact people of the twentieth century.
+Есть множество других подобных примеров, о которых никто не вспоминает, таких, как Виктор Жданов, который сделал один из величайших вкладов в историю человечества в 20-м веке.
 
-![Viktor Zhdanov](https://cdn.80000hours.org/wp-content/uploads/2016/06/Viktor-Zhdanov.jpg)[`Viktor Zhdanov lobbied the WHO to start the smallpox eradication campaign, bringing eradication forward by many years.`]
+![Виктор Жданов](https://cdn.80000hours.org/wp-content/uploads/2016/06/Viktor-Zhdanov.jpg)[`Жданов лоббировал в ВОЗ запуск программы по ликвидации оспы и продвинул борьбу с оспой на годы вперед.`]
 
-In the twentieth century, smallpox killed around 400 million people, far more than died in *all* wars and political famines. Credit for the elimination often goes to D.A. Henderson, who was in charge of the World Health Organization’s elimination programme. However, the programme already existed before he was brought on board. In fact, he initially turned down the job. The programme would probably have eventually succeeded even if Henderson hadn’t accepted the position.
+В двадцатом веке оспа убила около 400 миллионов человек — это намного больше, чем погибло за время *всех* войн и голодов. Заслуги в победе над оспой обычно приписывают Дональду Хендерсону, который заведовал программой ликвидации оспы Всемирной организации здравоохранения. Однако эта программа уже существовала на тот момент, когда Хендерсон занял руководящий пост. На самом деле, он сначала вообще отказывался от этой должности. Получается, что даже если бы Хендерсон не принял предложения об этой работе, программа все равно бы удалась.
 
-Zhdanov single-handedly lobbied that WHO to start the elimination campaign in the first place. Without his involvement, it would <a href="/2012/02/in-praise-of-viktor-zhdanov/">not have happened until much later, and possibly not at all</a>.
+Жданов сам лоббировал в ВОЗ первоочередный запуск программы по ликвидации оспы. Без его вклада, этого могло бы <a href="/2012/02/in-praise-of-viktor-zhdanov/">не произойти еще долгие годы, возможно, никогда вообще</a>.
 
-So why has advocacy been so effective in the past?
+Почему пропаганда была настолько эффективна в те годы? 
 
-First, ideas can spread quickly, so advocacy is a way for a small group of people to have a large effect on a problem. A small team can launch a social movement, lobby a government, start a campaign that influences public opinion, or just persuade their friends to take up a cause. In each case, they can have a lasting impact on the problem that goes far beyond what they could achieve directly.
+Во-первых, идеи имеют свойство быстро распространяться, поэтому пропаганда — доступный маленькой группе людей способ оказать огромное влияние на проблему. Небольшая команда может поднять общественное движение, лоббировать идеи в правительстве, запустить кампанию, которая повлияет на общественное мнение, или просто убедить своих друзей взяться за дело.  В каждом отдельном случае они смогут добиться такого долговременного эффекта, которого они никогда не смогли бы достичь напрямую.
 
-Second, advocacy is neglected. This is because there’s usually no commercial incentive to spread socially important ideas. Instead, advocacy is mainly pursued by people willing to dedicate their careers to making the world a better place.
+Во-вторых, у активизма не так уж много сторонников. Причина состоит в том, что распространение общественно важных идей не приносит прибыли. В основном, им занимаются маленькие группы людей, жаждущих посвятить свою карьеру тому, чтобы сделать мир лучше.
 
-Advocacy is also neglected because it’s uncomfortable to stand up to the status quo, and it’s often difficult to see the effect of your efforts, which makes it less motivating than doing good directly. Zhdanov was more important to the elimination effort than Henderson, but Henderson got the credit. For these reasons, advocacy can be a high impact path for those who *are* willing to step up.
+Гражданский активизм часто обходят стороной еще и потому, что плыть против течения сложно, результат усилий не виден сразу, из-за чего мотивации меньше, чем когда вносишь непосредственный вклад. Жданов для борьбы с оспой сделал больше, чем Хендерсон, однако слава досталась второму. Учитывая все эти факторы, успешным пропагандистом может стать только тот, кто *действительно* жаждет продвигать свои идеи. 
 
-In fact, there’s reason to think that advocacy is typically better than earning to give. One reason for this is that everyone wants more money so there’s a lot of competition, which places a limit on how much you can easily earn (and subsequently donate). There’s a lot less competition to spread good ideas, for the reasons we just discussed. So we expect that it would be possible for many people to influence more money than they could donate.
+Между тем, есть причины полагать, что пропаганда может оказаться более эффективным способом помочь другим, чем крупные пожертвования. Во-первых, все хотят больше денег, из-за чего растет конкуренция, и получить высокооплачиваемую должность не так-то просто (а значит,
+и делать крупные пожертвования сложнее). В распространении важных идей конкуренции намного меньше по причинам, которые мы только что обсудили. Поэтому нам кажется, что для многих людей этот способ станет более эффективным, чем пожертвования. 
 
-Advocacy is also an area where the most successful efforts do *far* more than the typical efforts in the field. The most successful advocates influence millions of people, while others might struggle to persuade more than a few friends. This means if you’re a good fit for advocacy, it’s often the best thing you can do, and you’re likely to achieve far more by doing it yourself than you could by funding someone to engage in advocacy on your behalf.
+Кроме того, в сфере пропаганды разрыв между высокой и средней эффективностью действий *очень* большой. Наиболее успешные активисты меняют жизнь миллионов людей, тогда как прочим едва удается переубедить хотя бы пару друзей. Следовательно, если пропагандистская деятельсность тебе близка, - это, возможно, лучшее, что ты можешь сделать для мира. И, скорее, ты достигнешь большего, если будешь заниматься этим сам, а не просто финансировать чьи-то действия от своего имени.
 
-![Rosa Parks.](https://cdn.80000hours.org/wp-content/uploads/2016/06/Rosaparks.jpg)[`Many of the highest impact people in history were advocates of some kind, and you can become an advocate in any job. Rosa Parks worked as a housekeeper and seamstress before making a stand for civil rights.`]
+![Роза Паркс.](https://cdn.80000hours.org/wp-content/uploads/2016/06/Rosaparks.jpg)[`Многие из тех, кто оставил самый значительный след в истории, так или иначе отстаивали общественные интересы, и ты можешь их отстаивать точно так же, занимаясь своей работой. Роза Паркс была домохозяйкой и швеёй, прежде чем стала борцом за гражданские права.`]
 
-If you’re interested in pursuing a career in advocacy – including recommendations of specific types of jobs – see our full article:
+Если тебе интересна карьера, связанная с пропагандой, включая наши рекомендации по ней, ознакомься со статьей:
 
-<a href="/articles/the-advocate/#whats-the-best-way-to-become-an-advocate" class="btn btn-default">How to become an advocate</a>
+<a href="/articles/the-advocate/#whats-the-best-way-to-become-an-advocate" class="btn btn-default">Как стать пропагандистом</a>
 
 ## Approach 3: Research
 
