--- a/6.md
+++ b/6.md
@@ -40,7 +40,7 @@
 
 В то же время, многие выпускники чувствуют себя нереализованными, потому что, выполняя свои профессиональные обязанности, не помогают людям напрямую. Но в этом и нет острой необходимости. Иногда вполне достаточно помогать людям косвенно, и, если мыслить шире, творчески, намного проще найти такую работу, в которой одновременно находится применение вашим уникальным способностям, и появляется возможность быть полезным другим людям.
 
-Ниже мы представим четыре способа, как можно, выполняя профессиональные обязанности, участвовать в решении социальных проблем, которые тебя волнуют (о них мы говорили в <a href="/career-guide/world-problems/">предыдущей главе</a>). Вот эти четыре пути: получать, чтобы отдавать; пропагандировать; заниматься научными исследованиями; непосредственно трудиться в проблемной отрасли. Мы составим конкретные рекомендации по каждому из них.
+Ниже мы представим четыре способа, как можно, выполняя профессиональные обязанности, участвовать в решении социальных проблем, которые тебя волнуют (о них мы говорили в <a href="/career-guide/world-problems/">предыдущей части</a>). Вот эти четыре пути: получать, чтобы отдавать; пропагандировать; заниматься научными исследованиями; непосредственно трудиться в проблемной отрасли. Мы составим конкретные рекомендации по каждому из них.
 
 *Время чтения: 20 минут.*</p>
 
@@ -147,12 +147,12 @@
 
 Призыв зарабатывать больше, чтобы делать больше пожертвований, стал нашей самой незабываемой и противоречивой идеей, она привлекла внимание <a href="http://web.archive.org/web/20170315131440/http://www.bbc.co.uk/news/education-15820786">BBC</a>, <a href="https://www.washingtonpost.com/news/wonk/wp/2013/05/31/join-wall-street-save-the-world/">Washington Post</a>, <a href="http://web.archive.org/web/20170315131826/http://www.dailymail.co.uk/news/article-2334682/Young-professionals-joining-Wall-Street-save-world.html">Daily Mail</a> и множества других средств массовой информации.
 
-Из-за этого многие люди думают, что это наша основная рекомендация. Однако, это вовсе не так: всё зависит от твоей личной ситуации.
+Из-за этого, многие люди думают, что это - наша основная рекомендация. Однако, это вовсе не так: всё зависит от твоей личной ситуации.
 
 Нам кажется, что стремление больше зарабатывать, чтобы делать более крупные пожертвования, оправдано в следующих случаях:
 
 . <strong>Ты можешь хорошо зарабатывать.</strong> Не иди в консалтинг, если ненавидишь его: так ты попросту выгоришь на работе, потеряешь какие-либо перспективы в карьере, и, если посмотреть в целом, просто не сможешь достаточно много заработать в этой сфере. Даже если ты заботишься исключительно о вкладе в решение мировых проблем, важно работать в той сфере, <a href="/career-guide/personal-fit/">которая тебе близка</a>.
-. <strong>Ты хочешь набраться опыта в высокооплачиваемой сфере</strong> (чтобы потом применить его там, где сможешь непосредственно помогать людям), а пожертвования помогут тебе оставаться полезным миру в этот период (в следующей главе мы объясним, почему важно накапливать <a href="/career-guide/career-capital/">«карьерный капитал»</a>).
+. <strong>Ты хочешь набраться опыта в высокооплачиваемой сфере</strong> (чтобы потом применить его там, где сможешь непосредственно помогать людям), а пожертвования помогут тебе оставаться полезным миру в этот период (в следующей части мы объясним, почему важно накапливать <a href="/career-guide/career-capital/">«карьерный капитал»</a>).
 . <strong>Тебе трудно определить, <a href="/career-guide/most-pressing-problems/">какие проблемы наиболее актуальны</a> which problems are most pressing</a>.</strong> Пожертвования – наиболее гибкий способ помогать миру, потому что ты в любой момент можешь выбрать другую благотворительную организацию или придержать деньги, пожертвовав их позже.
 . <strong>Ты хочешь помогать той отрасли, которая сильнее нуждается в деньгах</strong>, чем <a href="https://80000hours.org/2015/11/why-you-should-focus-more-on-talent-gaps-not-funding-gaps/">в непосредственном приложении сил и талантов</a>.
 
@@ -162,11 +162,11 @@
 
 <strong>Смогут ли люди на практике следовать этому подходу?</strong> Не откажутся ли они от пожертвований в пользу роскоши, поддавшись влиянию своего окружения? Нас беспокоил этот вопрос, когда мы впервые представили свою идею, но такого не произошло. Сотни людей продолжают отчислять крупные суммы на пожертвования, и тогда как некоторые бросили эту затею, найдя иной способ приносить пользу, мы не знаем ни одного человека, кто просто так отказался бы от намерения делать пожертвования.  В частности, многие люди продолжают жертвовать, поскольку публично взяли на себя такое обязательство, например, через <a href="https://www.givingwhatwecan.org/pledge/" target="_blank">Giving What We Can</a>. Когда знаешь, что есть уже столько людей, зарабатывающих ради пожертвований, стать приверженцем такой идеи становится намного проще.
 
-<strong>Множество высокооплачиваемых профессий могут причинять вред миру, разве не так?</strong> <a href="https://80000hours.org/articles/harmful-career/">Мы не рекомендуем браться за работу, от которой много вреда</a>, даже ради пожертвований. На практике, большинство людей, придерживающихся идеи «больше зарплата — больше пожертвований», работают в сфере технологий, управления активами, медицины, консалтинга, и на наш взгляд, эти профессии относительно полезны, либо просто нейтральны. К примеру, многие (но <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">не все</a>) трейдеры получают прибыль за счет других трейдеров, так что они, можно считать, обеспечивают круговорот денег <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">от одних богатых людей к другим</a>. Конечно, существуют <i>определенные</i> люди, способные нанести вред и в этих сферах, но такое замечание справедливо вообще для всех сфер. 
+<strong>Множество высокооплачиваемых профессий могут причинять вред миру, разве не так?</strong> <a href="https://80000hours.org/articles/harmful-career/">Мы не рекомендуем браться за работу, приносящую вред</a>, даже ради пожертвований. На практике, большинство людей, придерживающихся идеи «больше зарплата — больше пожертвований», работают в сфере технологий, управления активами, медицины, консалтинга, и на наш взгляд, эти профессии относительно полезны, либо просто нейтральны. К примеру, многие (но <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">не все</a>) трейдеры получают прибыль за счет других трейдеров, так что они, можно считать, обеспечивают круговорот денег <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">от одних богатых людей к другим</a>. Конечно, существуют <i>определенные</i> люди, способные нанести вред и в этих сферах, но такое замечание справедливо вообще для всех сфер. 
 
 В целом, существует множество способов заработать, и мы сомневаемся, что все они должны приносить вред. Как насчет медицины, инженерии или частного обучения? Кроме того, всегда можно совершенствовать свою отрасль изнутри. Если вашему предшественнику было всё равно, сколько вреда приносит его работа, а вам это небезразлично, для общества так наверняка будет лучше.
 
-<strong>Что, если у меня не будет мотивации работать на высокооплачиваемой должности?</strong> Тогда не работай на ней. Мы рекомендуем стремиться зарабатывать больше, чтобы больше отдавать только в том случае, если тебе это подходит. Просто помни, что, как мы обсуждали <a href="/career-guide/job-satisfaction/" target="_blank">ранее</a>, тебя могут заинтересовать намного больше профессий, чем кажется на первый взгляд.
+<strong>Что, если у меня не будет мотивации работать на высокооплачиваемой должности?</strong> Тогда не работай на ней. Мы рекомендуем стремиться зарабатывать больше, чтобы больше отдавать, только в том случае, если тебе это подходит. Просто помни, что, как мы обсуждали <a href="/career-guide/job-satisfaction/" target="_blank">ранее</a>, тебя могут заинтересовать намного больше профессий, чем кажется на первый взгляд.
 
 <strong>Может быть, я смог бы приносить больше пользы, занимаясь чем-то другим?</strong> Скорее всего, так оно и есть. Об этом мы поговорим далее.
 
@@ -188,7 +188,7 @@
 
 ## Approach 2: Пропаганда
 
-Одной из альтернатив пожертвованиям является пропаганда - продвижение решений для актуальных проблем. Возможность пропагандировать может так же стать целью построения карьеры во множестве различных областей, и может в них позволить влиять на мир даже сильнее, чем просто заработок ради пожертвований. 
+Одной из альтернатив пожертвованиям является пропаганда - продвижение решений для актуальных мировых проблем. Возможность пропагандировать может так же стать целью построения карьеры во множестве различных областей, и может в них позволить влиять на мир даже сильнее, чем просто заработок ради пожертвований. 
 
 Рассмотрим два варианта:
 
@@ -199,7 +199,7 @@
 
 Многие из тех, кто оставил самый значительный след в истории, так или иначе отстаивали общественные интересы. Взять,
 к примеру, Розу Паркс, которая отказалась уступать свое место в автобусе белому мужчине. Ее протест привел к постановлению Верховного Суда, согласно которому сегрегированные автобусы (отдельные автобусы для белых и для других этнических групп) были объявлены противоречащими конституции. 
-Паркс зарабатывала на жизнь трудом швеи, однако в свободное время она активно участвовала в движении за гражданские права. Когда ее арестовали, Паркс и NAACP действовали стратегически и ночами напролет упорно трудились, печатая тысячи листовок, чтобы организовать полный бойкот автобусов города, в котором проживали 40 тысяч афроамериканцев, параллельно с этим занимались и судебым разбирательством. Благодаря их действиям, был достигнут значительный прогресс в борьбе за гражданские права.
+Паркс зарабатывала на жизнь трудом швеи, однако, в свободное время она активно участвовала в движении за гражданские права. Когда ее арестовали, Паркс и NAACP действовали стратегически, и ночами напролет упорно трудились, печатая тысячи листовок, чтобы организовать полный бойкот автобусов города, в котором проживали 40 тысяч афроамериканцев. Параллельно с этим они занимались и судебным разбирательством. Благодаря их действиям, был достигнут значительный прогресс в борьбе за гражданские права.
 
 Есть множество других подобных примеров, о которых никто не вспоминает, таких, как Виктор Жданов, который сделал один из величайших вкладов в историю человечества в 20-м веке.
 
@@ -213,11 +213,11 @@
 
 Во-первых, идеи имеют свойство быстро распространяться, поэтому пропаганда — доступный маленькой группе людей способ оказать огромное влияние на проблему. Небольшая команда может поднять общественное движение, лоббировать идеи в правительстве, запустить кампанию, которая повлияет на общественное мнение, или просто убедить своих друзей взяться за дело.  В каждом отдельном случае они смогут добиться такого долговременного эффекта, которого они никогда не смогли бы достичь напрямую.
 
-Во-вторых, у активизма не так уж много сторонников. Причина состоит в том, что распространение общественно важных идей не приносит прибыли. В основном, им занимаются маленькие группы людей, жаждущих посвятить свою карьеру тому, чтобы сделать мир лучше.
+Во-вторых, у активизма не так уж много сторонников. Причина состоит в том, что распространение общественно важных идей не приносит прибыли. В основном, им занимаются маленькие группы людей, стремящихся посвятить свою карьеру тому, чтобы сделать мир лучше.
 
 Гражданский активизм часто обходят стороной еще и потому, что плыть против течения сложно, результат усилий не виден сразу, из-за чего мотивации меньше, чем когда вносишь непосредственный вклад. Жданов для борьбы с оспой сделал больше, чем Хендерсон, однако слава досталась второму. Учитывая все эти факторы, успешным пропагандистом может стать только тот, кто *действительно* жаждет продвигать свои идеи. 
 
-Между тем, есть причины полагать, что пропаганда может оказаться более эффективным способом помочь другим, чем крупные пожертвования. Во-первых, все хотят больше денег, из-за чего растет конкуренция, и получить высокооплачиваемую должность не так-то просто (а значит,
+Между тем, есть причины полагать, что пропаганда может оказаться более эффективным способом помощи миру, чем крупные пожертвования. Во-первых, все хотят больше денег, из-за чего растет конкуренция, и получить высокооплачиваемую должность не так-то просто (а значит,
 и делать крупные пожертвования сложнее). В распространении важных идей конкуренции намного меньше по причинам, которые мы только что обсудили. Поэтому нам кажется, что для многих людей этот способ станет более эффективным, чем пожертвования. 
 
 Кроме того, в сфере пропаганды разрыв между высокой и средней эффективностью действий *очень* большой. Наиболее успешные активисты меняют жизнь миллионов людей, тогда как прочим едва удается переубедить хотя бы пару друзей. Следовательно, если пропагандистская деятельсность тебе близка, - это, возможно, лучшее, что ты можешь сделать для мира. И, скорее, ты достигнешь большего, если будешь заниматься этим сам, а не просто финансировать чьи-то действия от своего имени.
